--- a/src/components/menu-item/MenuItem.scss
+++ b/src/components/menu-item/MenuItem.scss
@@ -33,7 +33,8 @@
             transition: transform 6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
         .content{
-            background:rgba(255,255,255,0.9);
+            opacity:1;
+            transition: opacity 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
     }
   
@@ -45,7 +46,8 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
-      background:rgba(255,255,255,0.7);
+      background:white;
+      opacity: 0.7;
       position: absolute;
   
       .heading {
