--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -1,5 +1,5 @@
 .custom-button {
-  min-width: 165px;
+  min-width: 125px;
   width: auto;
   height: 50px;
   letter-spacing: 0.5px;
@@ -13,10 +13,23 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  transition: background-color 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
   &:hover {
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+
+  &.google-signin{
+    margin-left: 20px;
+    background-color: #4285f4;
+    transition: background-color 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+    &:hover{
+      background-color: #4177e2;
+      color:black;
+      border:none;
+    }
   }
 }
