--- a/src/components/menu-item/MenuItem.scss
+++ b/src/components/menu-item/MenuItem.scss
@@ -8,6 +8,8 @@
     border: 1px solid black;
     margin: 0 7.5px 15px;
     overflow: hidden;
+    
+    
   
     &:first-child {
       margin-right: 7.5px;
@@ -25,16 +27,17 @@
         background-position: center;
         width: 100%;
         height: 100%;
+        transition: transform 3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     }
     &:hover{
         cursor: pointer;
         .background-image{
             transform: scale(1.2);
-            transition: transform 6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            // transition: transform 6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
         .content{
             opacity:1;
-            transition: opacity 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            // transition: opacity 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
     }
   
@@ -49,6 +52,7 @@
       background:white;
       opacity: 0.7;
       position: absolute;
+      transition: opacity 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   
       .heading {
         font-weight: bold;
