Firebase Authentication and FireStore User DB with signUp and SignIn forms done

--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -1,8 +1,8 @@
 .sign-in{
-    width:480px;
+    width:420px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-content: center;
     .title{
         margin:10px 0;
