--- a/src/components/FormInput/FormInput.scss
+++ b/src/components/FormInput/FormInput.scss
@@ -36,7 +36,7 @@ $main-color: black;
   input[type='password'] {
     letter-spacing: 0.3em;
   }
-  input[type='email']{
+  input{
       letter-spacing: 0.1em;
       font-size: 16px;
       font-weight: 400;
