Add to cart Styling

--- a/src/components/CollectionItem/CollectionItem.scss
+++ b/src/components/CollectionItem/CollectionItem.scss
@@ -6,6 +6,15 @@
     height: 350px;
     // border-radius: 50%;
     overflow: hidden;
+    position: relative;
+
+    .custom-button{
+        position: absolute;
+        top:255px;
+        display: none;
+    }
+
+    
 
     .image{
         width: 100%;
@@ -20,6 +29,9 @@
         .image{
             opacity: 0.3;
             transition: opacity 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        }
+        .custom-button{
+            display: flex;
         }
     }
 
