--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -27,7 +27,7 @@
   color: black;
   background-color: white;
   border: 1px solid black;
-  display: none;
+  // display: none;
     
   &:hover{
     background-color: black;
