--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -13,8 +13,8 @@
 
     .cart-items{
         height: 240px;
-        display: flex;
         overflow-y: auto;
+        overflow-x: hidden;
         margin-bottom: 5px;
     }
 
