Made empty Checkout Page and made links for Checkout active, also userSelectors and used createStructuredSelector from Reselect

--- a/src/components/CartDropdown/CartDropdown.scss
+++ b/src/components/CartDropdown/CartDropdown.scss
@@ -11,6 +11,11 @@
     background-color: white;
     z-index: 5;
 
+    .empty-cart{
+        padding:5px 25px;
+        color: slategray;
+    }
+
     .cart-items{
         height: 240px;
         overflow-y: auto;
