--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -1,6 +1,6 @@
 .custom-button {
   min-width: 125px;
-  width: auto;
+  width: 100%;
   height: 50px;
   letter-spacing: 0.5px;
   line-height: 50px;
@@ -14,6 +14,7 @@
   border: none;
   display: flex;
   justify-content: center;
+  margin: 0;
   cursor: pointer;
   transition: background-color 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
