--- a/src/components/checkout-item/CheckoutItem.scss
+++ b/src/components/checkout-item/CheckoutItem.scss
@@ -21,7 +21,13 @@
         width:23%;
     }
     .quantity{
-        padding-left:20px;
+        display: flex;
+        .value{
+            padding:0px 10px;
+        }
+        .arrow{
+            cursor: pointer;
+        }
     }
     .remove-button{
         cursor: pointer;
