Added working Stripe payments frontend

--- a/src/pages/Checkout/Checkout.scss
+++ b/src/pages/Checkout/Checkout.scss
@@ -26,4 +26,21 @@
         margin-top:40px;
         font-size:25px; ;
     }
+
+    button{
+        margin-left: auto;
+        margin-top: 40px;
+    }
+
+    .stripe-test{
+        color: tomato;
+        font-size: 15px;
+        margin: 20px auto;
+
+
+        hr{
+            background-color:lightgrey;
+            border:0.5px solid lightgray;
+        }
+    }
 }
